recursion.cons.butlast.ButLast.scala.error
Compilation error:
ButLast:6: error: '(' expected but identifier found.
  else if l.head::butlast(l.tail)
          ^ButLast:7: error: illegal start of simple expression
} 
^