recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  if (l.tail==Nil) {
    Nil
  }
  else if l.head::butlast(l.tail)
}